--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,16 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a href="#" class="navbar-brand">Recipe Book</a>
+        <a routerLink="/home" class="navbar-brand">Meeting User Application</a>
       </div>
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
-          <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
+          <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+          <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li 
-            class="dropdown"
-            appDropdown>
-            <a style="cursor: pointer;" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a style="cursor: pointer;">Save Data</a></li>
-              <li><a style="cursor: pointer;">Fetch Data</a></li>
-            </ul>
-          </li>
-        </ul>
+          <li><a routerLink="/logout">Logout</a></li></ul>
         </div>
     </div>
   </nav>
