--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<h3>Willkommen!</h3>
+<hr>
+<div class="row">
+    <div class="col-md-6">
+        <p>Dies ist eine Anwendung in der User sich zu Veranstaltungen eintragen können. Es gibt User, welche die Rolle Admin besitzen und somit die Veranstaltungen bearbeiten, neue hinzufügen und alte löschen können. Außerdem können sie die Teilnemer der einzelnen Veranstaltungen einsehen und entscheiden welche Verastaltungen den Usern überhaupt angezeigt werden.</p>
+        <br>
+        <p>Über die Nachfolgenden Links kann man auf die verschiedenen Funktionen dieser Anwendung zugreifen. Alternativ geht das auch über die Links in der Kopfzeile</p>
+        <a class="btn btn-primary" routerLink="/login">Zum Login</a>
+        <br>
+        <a class="btn btn-primary" routerLink="/meeting/list">Zur Veranstaltungsliste</a>
+        <label>(nur möglich, wenn man eingeloggt ist)</label>
+    </div>
+</div>
