--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<h3>Login</h3>
+<hr>
+<div class="row">
+    <div class="col-md-6">
+        <p>Username form here</p>
+        <p>Password form here</p>
+        <button type="submit" class="btn btn-primary" routerLink="/meeting/list">Login</button>
+    </div>
+</div>
