added provisional login

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,6 @@
     <div class="col-md-6">
         <p>Username form here</p>
         <p>Password form here</p>
-        <button type="submit" class="btn btn-primary" routerLink="/meeting/list">Login</button>
+        <button type="submit" (click)="onLogin()" class="btn btn-primary" routerLink="/meeting/list">Login</button>
     </div>
 </div>
