--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
           <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a routerLink="/logout">Logout</a></li></ul>
+          <li><a routerLink="/logout" (click)="onLogout()">Logout</a></li></ul>
         </div>
     </div>
   </nav>
