--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,12 +6,13 @@
   
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
           <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid rgb(180, 180, 180);">
           <!-- *ngIf klappt noch nicht richtig, da loggedIn nur in der onInit MMethode gesetzt wird -->
-          <li *ngIf="loggedIn"><a>Eingeloggt als Vorname Nachname</a></li>
+          <li *ngIf="!loggedIn" routerLinkActive="active"><a routerLink="/register">Registrieren</a></li>
+          <li *ngIf="loggedIn" class="navbar-text" style="cursor: default;"><span>Eingeloggt als Vorname Nachname</span></li>
+          <li *ngIf="!loggedIn" routerLinkActive="active"><a routerLink="/login">Login</a></li>
           <li *ngIf="loggedIn"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
         </ul>
       </div>
