--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,1 +1,72 @@
-<p>register works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-6">
+            <h3>Registrierung</h3>
+            <hr>
+            <form
+                [formGroup]="registerForm"
+                (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="username">Benutzername:</label>
+                    <i *ngIf="!registerForm.get('username').valid && registerForm.get('username').touched" style="color: red;"> Dieser Benutzername ist bereits vergeben.</i>
+                    <input 
+                        type="text"
+                        id="username"
+                        formControlName="username"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="password">Passwort:</label>
+                    <i *ngIf="!registerForm.get('password').valid && registerForm.get('password').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+                    <input 
+                        type="password"
+                        id="password"
+                        formControlName="password"
+                        class="form-control">
+                </div>
+                <br>
+                <div class="form-group">
+                    <label for="firstname">Vorname:</label>
+                    <i *ngIf="!registerForm.get('firstname').valid && registerForm.get('firstname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+                    <input 
+                        type="text"
+                        id="firstname"
+                        formControlName="firstname"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="lastname">Nachname:</label>
+                    <i *ngIf="!registerForm.get('lastname').valid && registerForm.get('lastname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+                    <input 
+                        type="text"
+                        id="lastname"
+                        formControlName="lastname"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="email">E-Mail:</label>
+                    <i *ngIf="!registerForm.get('email').valid && registerForm.get('email').touched" style="color: red;"> Bitte geben Sie eine gültige Email Addresse ein.</i>
+                    <input 
+                        type="text"
+                        id="email"
+                        formControlName="email"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="company">Firma/Unternehmen:</label>
+                    <i *ngIf="!registerForm.get('company').valid && registerForm.get('company').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+                    <input 
+                        type="text"
+                        id="company"
+                        formControlName="company"
+                        class="form-control">
+                </div>
+                <br>
+                <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid">
+                    <span *ngIf="registerForm.valid">Registrieren</span>
+                    <span *ngIf="registerForm.invalid" style="color: rgb(117, 0, 0);"> Das Registrierungsformular ist noch nicht vollständing ausgefüllt.</span>
+                </button>
+            </form>
+        </div>
+    </div>
+</div>
