--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -1,1 +1,45 @@
-<p>meeting-edit works</p>
+<div class="col-xs-6">
+    <h3>Veranstaltung hinzufügen</h3>
+    <hr>
+    <form
+        [formGroup]="meetingForm"
+        (ngSubmit)="onSubmit()">
+        <!-- <div class="form-group">
+            <label for="username">Benutzername:</label>
+            <i *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+            <input 
+                type="text"
+                id="username"
+                formControlName="username"
+                class="form-control">
+        </div> -->
+            <div class="form-group">
+                <label for="name">Veranstaltungsname: </label>
+                <i *ngIf="meetingForm.get('name').invalid && meetingForm.get('name').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld</i>
+                <input 
+                    type="text" 
+                    name="name"
+                    formControlName="name"
+                    class="form-control"
+                    placeholder="Veranstaltungsname">
+            </div>
+            <div class="form-group">
+                <label for="datetime">Datum & Uhrzeit: </label>
+                <i *ngIf="meetingForm.get('datetime').invalid && meetingForm.get('datetime').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld</i>
+                <input 
+                    type="datetime-local" 
+                    name="datetime"
+                    formControlName="datetime"
+                    class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="display">Anzeigen: </label>
+                <input 
+                    type="checkbox" 
+                    name="display"
+                    formControlName="display">
+            </div>
+            <button type="submit"  class="btn btn-info col-xs-12">Veranstaltung speichern</button>
+    </form>
+    <button class="btn btn-secondary btn-sm col-xs-6" >Zurück zur Veranstaltungsliste</button>
+</div>
