--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -22,7 +22,8 @@
                     name="name"
                     formControlName="name"
                     class="form-control"
-                    placeholder="Veranstaltungsname">
+                    placeholder="Veranstaltungsname"
+                    autofocus>
             </div>
             <div class="form-group">
                 <label for="datetime">Datum & Uhrzeit: </label>
@@ -41,7 +42,10 @@
                     name="display"
                     formControlName="display">
             </div>
-            <button type="submit"  class="btn btn-info col-xs-12">Veranstaltung speichern</button>
+            <button type="submit" class="btn btn-info btn-block" [disabled]="meetingForm.invalid">
+                <span *ngIf="meetingForm.valid">Veranstaltung speichern</span>
+                <span *ngIf="meetingForm.invalid" style="color: rgb(117, 0, 0);"> Das Meeting benötigt einen Namen</span>
+            </button>
     </form>
     <button type="button" class="btn btn-secondary btn-sm col-xs-12" (click)="onBackToList()">Zurück zur Veranstaltungsliste</button>
 </div>
