--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -1,35 +1,38 @@
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6">
-            <h3>Login</h3>
-            <hr>
-            <form
-                [formGroup]="loginForm"
-                (ngSubmit)="onSubmit()">
-                <div class="form-group">
-                    <label for="username">Benutzername:</label>
-                    <i *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
-                    <input 
-                        type="text"
-                        id="username"
-                        formControlName="username"
-                        class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="password">Passwort:</label>
-                    <i *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
-                    <input 
-                        type="password"
-                        id="password"
-                        formControlName="password"
-                        class="form-control">
-                </div>
-                <br>
-                <button type="submit" class="btn btn-info btn-block" [disabled]="loginForm.invalid">
-                    <span *ngIf="loginForm.valid">Anmelden</span>
-                    <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständing ausgefüllt.</span>
-                </button>
-            </form>
-        </div>
+<div class="col-md-12">
+  <div class="card card-container">
+    <div class="col-xs-6" *ngIf="isLoggedIn">
+      <span>Sie sind bereits eingeloggt</span>
     </div>
+    <div class="col-xs-6" *ngIf="!isLoggedIn">
+      <h3>Login</h3>
+      <hr>
+      <form
+          [formGroup]="loginForm"
+          (ngSubmit)="onSubmit()">
+          <div class="form-group">
+              <label for="username">Benutzername:</label>
+              <i *ngIf="loginForm.get('username').invalid && loginForm.get('username').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+              <input 
+                  type="text"
+                  id="username"
+                  formControlName="username"
+                  class="form-control">
+          </div>
+          <div class="form-group">
+              <label for="password">Passwort:</label>
+              <i *ngIf="loginForm.get('password').invalid && loginForm.get('password').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+              <input 
+                  type="password"
+                  id="password"
+                  formControlName="password"
+                  class="form-control">
+          </div>
+          <br>
+          <button type="submit" class="btn btn-info btn-block" [disabled]="loginForm.invalid">
+              <span *ngIf="loginForm.valid">Anmelden</span>
+              <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständing ausgefüllt.</span>
+          </button>
+      </form>
+    </div>
+  </div>
 </div>
