--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,21 +1,20 @@
 <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a routerLink="/home" class="navbar-brand">Meeting User Application</a>
-      </div>
-  
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid rgb(180, 180, 180);">
-          <!-- *ngIf klappt noch nicht richtig, da loggedIn nur in der onInit MMethode gesetzt wird -->
-          <li *ngIf="!loggedIn" routerLinkActive="active"><a routerLink="/register">Registrieren</a></li>
-          <li *ngIf="loggedIn" class="navbar-text" style="cursor: default;"><span>Eingeloggt als Vorname Nachname</span></li>
-          <li *ngIf="!loggedIn" routerLinkActive="active"><a routerLink="/login">Login</a></li>
-          <li *ngIf="loggedIn"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a routerLink="/home" class="navbar-brand">Meeting User Application</a>
     </div>
-  </nav>
-  
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid rgb(180, 180, 180);">
+        <li *ngIf="!isLoggedIn" routerLinkActive="active"><a routerLink="/register">Registrieren</a></li>
+        <li *ngIf="isLoggedIn" routerLinkActive="active"><a routerLink="/profile">Eingeloggt als {{ currentUser.username }}</a></li>
+
+        <li *ngIf="!isLoggedIn" routerLinkActive="active"><a routerLink="/login">Login</a></li>
+        <li *ngIf="isLoggedIn"><a style="cursor: pointer;" (click)="onLogout()">Logout</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
