--- a/src/app/authentification/login/login.component.css
+++ b/src/app/authentification/login/login.component.css
@@ -10,7 +10,7 @@ label {
 
 .card {
   background-color: #f7f7f7;
-  padding: 20px 25px 30px;
+  padding: 20px 25px;
   margin: 0 auto 25px;
   margin-top: 50px;
   -moz-border-radius: 2px;
@@ -19,6 +19,7 @@ label {
   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  float: none;
 }
 
 .profile-img-card {
