hide button to add a new meeting if logged in as user and not as admin

--- a/src/app/meeting/meeting-list/meeting-list.component.html
+++ b/src/app/meeting/meeting-list/meeting-list.component.html
@@ -4,9 +4,12 @@
 </div>
 
 <div *ngIf="showMeetings">
-    <button class="btn btn-success" (click)="onAddMeeting()">Veranstaltung hinzufügen</button>
+    <h3>Veranstaltungsliste</h3>
     <hr>
-	<table class="table table-bordered table-striped" >
+    <button *ngIf="isAdmin" class="btn btn-success" (click)="onAddMeeting()">Veranstaltung hinzufügen</button>
+    <br *ngIf="isAdmin">
+    <br *ngIf="isAdmin">
+    <table class="table table-bordered table-striped" >
         <thead class="thead-dark">
             <tr>
                 <th>Nr.</th>
