--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
+        <li *ngIf="isLoggedIn" routerLinkActive="active"><a routerLink="/meeting/list">Veranstaltungsliste</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" style="border-left: 1px solid rgb(180, 180, 180);">
         <li *ngIf="!isLoggedIn" routerLinkActive="active"><a routerLink="/register">Registrieren</a></li>
