--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,9 +1,6 @@
-<div class="container" *ngIf="user; else loggedOut">
-  <header class="jumbotron">
-    <h3>
-      <strong>Profil</strong>
-    </h3>
-  </header>
+<div class="col-xs-12">
+  <h3>Profil</h3>
+  <hr>
   <p>
     <strong>Benutzername:</strong>
     {{ user.username }}
@@ -29,7 +26,3 @@
     {{ user.roles }}
   </p>
 </div>
-
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
