moved some files to other directions and refractored the hole code. In addition did some optical changes for better user experience

--- a/src/app/error/access-denied/access-denied.component.html
+++ b/src/app/error/access-denied/access-denied.component.html
@@ -1,5 +1,7 @@
-<h3>Zugriff verweigert!</h3>
-<hr>
-<p>Sie haben keine Berechtigung um auf diese Seite zuzugreifen.</p>
-<p>Bitte melden Sie sich mit einem Benutzerkonto an, welches Zugriff auf diese Seite hat.</p>
-<button class="btn btn-primary" (click)="onBack()">Zurück zur Startseite</button>
+<div class="col-xs-6">
+  <h3>Zugriff verweigert!</h3>
+  <hr>
+  <p>Sie haben keine Berechtigung um auf diese Seite zuzugreifen.</p>
+  <p>Bitte melden Sie sich mit einem Benutzerkonto an, welches Zugriff auf diese Seite hat.</p>
+  <button class="btn btn-primary" (click)="onBack()">Zurück zur Startseite</button>
+</div>
