--- a/src/app/authentification/login/login.component.html
+++ b/src/app/authentification/login/login.component.html
@@ -33,6 +33,8 @@
         <span *ngIf="loginForm.valid">Anmelden</span>
         <span *ngIf="loginForm.invalid" style="color: rgb(117, 0, 0);"> Das Anmeldeformular ist noch nicht vollständing ausgefüllt.</span>
       </button>
+      <hr>
+      <button type="button" class="btn btn-primary btn-block" (click)="onRegister()">Noch kein Mitglied? Hier registrieren</button>
     </form>
   </div>
 </div>
