--- a/src/app/authentification/register/register.component.html
+++ b/src/app/authentification/register/register.component.html
@@ -1,82 +1,89 @@
 <div class="card col-xs-5">
-  <h3>Registrierung</h3>
-  <hr>
-  <form
-  [formGroup]="registerForm"
-  (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <span for="username">Benutzername:</span>
-      <span *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched" style="color: red;">
-        <i *ngIf="true">
-          Bitte geben Sie einen gültigen Benutzernamen ein.
-        </i>
-      </span>
-      <span *ngIf="usernameAlreadyExists" style="color: red;"><i> Dieser Benutzername ist bereits vergeben.</i></span>
-      <input 
-      type="text"
-      id="username"
-      formControlName="username"
-      class="form-control"
-      (ngModelChange)="changedUsername()">
-    </div>
-    <div class="form-group">
-      <span for="password">Passwort:</span>
-      <i *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched" style="color: red;"> Bitte geben Sie ein gültiges Passwort ein.</i>
-      <input 
-      type="password"
-      id="password"
-      formControlName="password"
-      class="form-control">
-    </div>
-    <br>
-    <div class="form-group">
-      <span for="firstname">Vorname:</span>
-      <i *ngIf="registerForm.get('firstname').invalid && registerForm.get('firstname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
-      <input 
-      type="text"
-      id="firstname"
-      formControlName="firstname"
-      class="form-control">
-    </div>
-    <div class="form-group">
-      <span for="lastname">Nachname:</span>
-      <i *ngIf="registerForm.get('lastname').invalid && registerForm.get('lastname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
-      <input 
-      type="text"
-      id="lastname"
-      formControlName="lastname"
-      class="form-control">
-    </div>
-    <div class="form-group">
-      <span for="email">E-Mail:</span>
-      <span *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched" style="color: red;">
-        <i #noEmail>
-          Bitte geben Sie eine gültige E-Mail Adresse ein.
-        </i>
-      </span>
-      <span *ngIf="emailAlreadyExists" style="color: red;"><i> Diese E-Mail Adresse ist bereits vergeben.</i></span>
-      <input 
-      type="email; else noEmail;"
-      id="email"
-      formControlName="email"
-      class="form-control"
-      (ngModelChange)="changedEmail()">
-    </div>
-    <div class="form-group">
-      <span for="company">Firma/Unternehmen:</span>
-      <i *ngIf="registerForm.get('company').invalid && registerForm.get('company').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
-      <input 
-      type="text"
-      id="company"
-      formControlName="company"
-      class="form-control">
-    </div>
-    <i *ngIf="isSignUpFailed" style="color: red;">Fehlerhafte Registrierungsdaten</i>
-    <br>
-    <br>
-    <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid">
-      <span *ngIf="registerForm.valid">Registrieren</span>
-      <span *ngIf="registerForm.invalid" style="color: rgb(117, 0, 0);"> Das Formular ist noch nicht vollständing ausgefüllt.</span>
-    </button>
-  </form>
+  <div *ngIf="isLoggedIn">
+    Sie können sich nicht registrieren, wahrend Sie eingeloggt sind.
+  </div>
+  <div *ngIf="!isLoggedIn">
+    <h3>Registrierung</h3>
+    <hr>
+    <form
+    [formGroup]="registerForm"
+    (ngSubmit)="onSubmit()">
+      <div class="form-group">
+        <span for="username">Benutzername:</span>
+        <span *ngIf="registerForm.get('username').invalid && registerForm.get('username').touched" style="color: red;">
+          <i *ngIf="true">
+            Bitte geben Sie einen gültigen Benutzernamen ein.
+          </i>
+        </span>
+        <span *ngIf="usernameAlreadyExists" style="color: red;"><i> Dieser Benutzername ist bereits vergeben.</i></span>
+        <input 
+        type="text"
+        id="username"
+        formControlName="username"
+        class="form-control"
+        (ngModelChange)="changedUsername()">
+      </div>
+      <div class="form-group">
+        <span for="password">Passwort:</span>
+        <i *ngIf="registerForm.get('password').invalid && registerForm.get('password').touched" style="color: red;"> Bitte geben Sie ein gültiges Passwort ein.</i>
+        <input 
+        type="password"
+        id="password"
+        formControlName="password"
+        class="form-control">
+      </div>
+      <hr>
+      <div class="form-group">
+        <span for="firstname">Vorname:</span>
+        <i *ngIf="registerForm.get('firstname').invalid && registerForm.get('firstname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+        <input 
+        type="text"
+        id="firstname"
+        formControlName="firstname"
+        class="form-control">
+      </div>
+      <div class="form-group">
+        <span for="lastname">Nachname:</span>
+        <i *ngIf="registerForm.get('lastname').invalid && registerForm.get('lastname').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+        <input 
+        type="text"
+        id="lastname"
+        formControlName="lastname"
+        class="form-control">
+      </div>
+      <div class="form-group">
+        <span for="email">E-Mail:</span>
+        <span *ngIf="registerForm.get('email').invalid && registerForm.get('email').touched" style="color: red;">
+          <i #noEmail>
+            Bitte geben Sie eine gültige E-Mail Adresse ein.
+          </i>
+        </span>
+        <span *ngIf="emailAlreadyExists" style="color: red;"><i> Diese E-Mail Adresse ist bereits vergeben.</i></span>
+        <input 
+        type="email; else noEmail;"
+        id="email"
+        formControlName="email"
+        class="form-control"
+        (ngModelChange)="changedEmail()">
+      </div>
+      <div class="form-group">
+        <span for="company">Firma/Unternehmen:</span>
+        <i *ngIf="registerForm.get('company').invalid && registerForm.get('company').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld.</i>
+        <input 
+        type="text"
+        id="company"
+        formControlName="company"
+        class="form-control">
+      </div>
+      <i *ngIf="isSignUpFailed" style="color: red;">Fehlerhafte Registrierungsdaten</i>
+      <br>
+      <br>
+      <button type="submit" class="btn btn-info btn-block" [disabled]="registerForm.invalid">
+        <span *ngIf="registerForm.valid">Registrieren</span>
+        <span *ngIf="registerForm.invalid" style="color: rgb(117, 0, 0);"> Das Registrierungsformular ist noch nicht vollständing ausgefüllt.</span>
+      </button>
+      <hr>
+      <button type="button" class="btn btn-primary btn-block" (click)="onLogin()">Doch schon Mitglied? Zurück zum Login</button>
+    </form>
+  </div>
 </div>
