--- a/src/app/error/page-not-found/page-not-found.component.html
+++ b/src/app/error/page-not-found/page-not-found.component.html
@@ -1,4 +1,7 @@
-<h3>Seite nicht gefunden!</h3>
-<hr>
-<p>Diese Seite konnte leider nicht gefunden werden</p>
-<button class="btn btn-primary" (click)="onBack()">Zurück zur Startseite</button>
+<div class="col-xs-6">
+  <h3>Seite nicht gefunden!</h3>
+  <hr>
+  <p>Diese Seite konnte leider nicht gefunden werden.</p>
+  <p>Bitte überprüfen Sie die eingegebene URL.</p>
+  <button class="btn btn-primary" (click)="onBack()">Zurück zur Startseite</button>
+</div>
