--- a/src/app/loader.css
+++ b/src/app/loader.css
@@ -1,6 +1,6 @@
 .loader {
-    border: 12.5px solid #f3f3f3; /* Light grey */
-    border-top: 12.5px solid #3498db; /* Blue */
+    border: 12.5px solid #f3f3f3;
+    border-top: 12.5px solid #3498db;
     border-radius: 50%;
     width: 50px;
     height: 50px;
