--- a/src/app/meeting/meeting-edit/meeting-edit.component.html
+++ b/src/app/meeting/meeting-edit/meeting-edit.component.html
@@ -1,41 +1,43 @@
 <div class="col-xs-6">
-    <h3 *ngIf="id !== 0">Veranstaltung bearbeiten</h3>
-    <h3 *ngIf="id === 0">Veranstaltung hinzufügen</h3>
-    <hr>
-    <form
-        [formGroup]="meetingForm"
-        (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="name">Veranstaltungsname: </label>
-                <i *ngIf="meetingForm.get('name').invalid && meetingForm.get('name').touched" style="color: red;"> Dieses Feld ist ein Pflichtfeld</i>
-                <input 
-                    type="text" 
-                    name="name"
-                    formControlName="name"
-                    class="form-control"
-                    placeholder="Veranstaltungsname"
-                    autofocus>
-            </div>
-            <div class="form-group">
-                <label for="datetime">Datum & Uhrzeit: </label>
-                <input 
-                    type="datetime-local" 
-                    name="datetime"
-                    formControlName="datetime"
-                    class="form-control"
-                    min="{{ now }}">
-            </div>
-            <div class="form-group">
-                <label for="display">Anzeigen: </label>
-                <input 
-                    type="checkbox" 
-                    name="display"
-                    formControlName="display">
-            </div>
-            <button type="submit" class="btn btn-info btn-block" [disabled]="meetingForm.invalid">
-                <span *ngIf="meetingForm.valid">Veranstaltung speichern</span>
-                <span *ngIf="meetingForm.invalid" style="color: rgb(117, 0, 0);"> Das Meeting benötigt einen Namen</span>
-            </button>
-    </form>
-    <button type="button" class="btn btn-secondary btn-sm col-xs-12" (click)="onBackToList()">Zurück zur Veranstaltungsliste</button>
+  <h3 *ngIf="id !== 0">Veranstaltung bearbeiten</h3>
+  <h3 *ngIf="id === 0">Veranstaltung hinzufügen</h3>
+  <hr>
+  <form
+  [formGroup]="meetingForm"
+  (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="name">Veranstaltungsname: </label>
+      <i *ngIf="meetingForm.get('name').invalid && meetingForm.get('name').touched" style="color: red;"> Bitte geben Sie einen Namen für die Veranstaltung ein.</i>
+      <input 
+      type="text" 
+      name="name"
+      formControlName="name"
+      class="form-control"
+      placeholder="Veranstaltungsname"
+      autofocus>
+    </div>
+    <div class="form-group">
+      <label for="datetime">Datum & Uhrzeit: </label>
+      <input 
+      type="datetime-local" 
+      name="datetime"
+      formControlName="datetime"
+      class="form-control"
+      min="{{ now }}">
+    </div>
+    <div class="form-group">
+      <label for="display">Anzeigen: </label>
+      <input 
+      type="checkbox" 
+      name="display"
+      formControlName="display">
+    </div>
+    <button type="submit" class="btn btn-info btn-block" [disabled]="meetingForm.invalid">
+      <span *ngIf="meetingForm.valid">Veranstaltung speichern</span>
+      <span *ngIf="meetingForm.invalid" style="color: rgb(117, 0, 0);">Bitte geben Sie einen Namen für die Veranstaltung ein</span>
+    </button>
+  </form>
+  <hr>
+  <button type="button" class="btn btn-secondary col-xs-12" (click)="onBackToList()">Zurück zur Veranstaltungsliste</button>
 </div>
+  
