--- a/src/app/meeting/meeting-list/meeting-list.component.html
+++ b/src/app/meeting/meeting-list/meeting-list.component.html
@@ -1,69 +1,64 @@
-<div class="col-xs-12">
-    <div *ngIf="!showMeetings">
-        Sie müssen sich zuerst einloggen: 
-        <button class="btn btn-primary btn-xs" routerLink="/login">Zum Login</button>
-    </div>
-
-    <div *ngIf="showMeetings">
-        <h3>Veranstaltungsliste</h3>
-        <hr>
-        <button *ngIf="isAdmin" class="btn btn-success" (click)="onAddMeeting()">Veranstaltung hinzufügen</button>
-        <br *ngIf="isAdmin">
-        <br *ngIf="isAdmin">
-        <table class="table table-bordered table-striped" >
-            <thead class="thead-dark">
-                <tr>
-                    <th>Nr.</th>
-                    <th>Veranstaltungsname</th>
-                    <th style="text-align:center" >Datum</th>
-                    <th style="text-align:center" >Uhrzeit</th>
-                    <th *ngIf="isAdmin" style="text-align:center" >Aktion</th>
-                    <th *ngIf="isAdmin" style="text-align:center" >Für User sichtbar</th>
-                    <th *ngIf="isAdmin" style="text-align:center" >Teilnehmerliste</th>
-                    <th *ngIf="!isAdmin" style="text-align:center" >An Veranstaltung teilnehmen</th>
-                </tr>
-            </thead>
-            <tbody *ngIf="!isLoading">
-                <tr *ngFor="let meeting of meetings; let i = index">
-                    <td style="text-align:right; width: 10px;">{{ i + 1 }}</td>
-                    <td>{{ meeting.name }}</td>
-                    <td style="text-align:center; width: 10px;" >{{ meeting.datetime | date:'dd.MM.yyyy' }}</td>
-                    <td style="text-align:center; width: 79px;" >{{ meeting.datetime | date:'HH:mm' }} Uhr</td>
-                    
-                    <td *ngIf="isAdmin" style="text-align:center; width: 156px;" >
-                        <a class="btn btn-info btn-xs" (click)="onEditMeeting(meeting.id)">Bearbeiten</a>
-                        | 
-                        <a class="btn btn-danger btn-xs" (click)="onDeleteMeeting(meeting.id)">Löschen</a>
-                    </td>
-                    <td *ngIf="isAdmin" style="text-align:center; width: 133px;" >
-                        <a *ngIf="meeting.display" class="btn btn-success btn-xs" (click)="onChangeDisplay(i)">✔</a>
-                        <a *ngIf="!meeting.display" class="btn btn-danger btn-xs" (click)="onChangeDisplay(i)">✖</a>
-                    </td>
-                    <td *ngIf="isAdmin" style="text-align:center; cursor: pointer; width: 10px;" >
-                        <a (click)="onShowParticipants(meeting.id)">anzeigen</a>
-                    </td>
-                    <td *ngIf="!isAdmin" style="text-align:center; width: 210px;" >
-                        <a *ngIf="signupValues[meeting.id]" class="btn btn-success btn-xs" (click)="onChangeSignup(meeting.id)">✔</a>
-                        <a *ngIf="!signupValues[meeting.id]" class="btn btn-danger btn-xs" (click)="onChangeSignup(meeting.id)">✖</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <table *ngIf="isLoading" class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th style="text-align:center" >
-                        <div class="loader">
-
-                        </div>
-                    </th>
-                </tr>
-            </thead>
-        </table>
-        <button type="submit" class="btn btn-info col-xs-3" (click)="onSaveChanges()" [disabled]="!isDifferent">
-            <span *ngIf="isDifferent">Änderungen übernehmen</span>
-            <span *ngIf="!isDifferent" style="color: rgb(117, 0, 0);">keine Änderungen vorhanden</span>
-        </button>
-    </div>
+<div class="col-xs-12">  
+  <h3>Veranstaltungsliste</h3>
+  <hr>
+  <button *ngIf="isAdmin" class="btn btn-success col-xs-3" (click)="onAddMeeting()">Veranstaltung hinzufügen</button>
+  <br *ngIf="isAdmin">
+  <br *ngIf="isAdmin">
+  <br *ngIf="isAdmin">
+  <div *ngIf="!meetingsExsits">
+    Es existieren noch keine Veranstaltungen, bitte fügen Sie zuerst welche hinzu, oder wenden Sie sich an einen Administrator, damit dieser Veranstaltungen hinzufügt
+  </div>
+  <div *ngIf="meetingsExsits">
+    <table class="table table-bordered table-striped" >
+      <thead class="thead-dark">
+        <tr>
+          <th style="width: 10px;">Nr.</th>
+          <th>Veranstaltungsname</th>
+          <th style="text-align:center; width: 90px;" >Datum</th>
+          <th style="text-align:center; width: 79px;" >Uhrzeit</th>
+          <th *ngIf="isAdmin" style="text-align:center; width: 156px;" >Aktion</th>
+          <th *ngIf="isAdmin" style="text-align:center; width: 133px;" >Für User sichtbar</th>
+          <th *ngIf="isAdmin" style="text-align:center; width: 10px;" >Teilnehmerliste</th>
+          <th *ngIf="!isAdmin" style="text-align:center; width: 210px;" >An Veranstaltung teilnehmen</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="!isLoading">
+        <tr *ngFor="let meeting of meetings; let i = index">
+          <td style="text-align:right;">{{ i + 1 }}</td>
+          <td>{{ meeting.name }}</td>
+          <td style="text-align:center;" >{{ meeting.datetime | date:'dd.MM.yyyy' }}</td>
+          <td style="text-align:center;" >{{ meeting.datetime | date:'HH:mm' }} Uhr</td>
+          <td *ngIf="isAdmin" style="text-align:center;" >
+            <a class="btn btn-info btn-xs" (click)="onEditMeeting(meeting.id)">Bearbeiten</a>
+            | 
+            <a class="btn btn-danger btn-xs" (click)="onDeleteMeeting(meeting.id)">Löschen</a>
+          </td>
+          <td *ngIf="isAdmin" style="text-align:center;" >
+            <a *ngIf="meeting.display" class="btn btn-success btn-xs" (click)="onChangeDisplay(i)">✔</a>
+            <a *ngIf="!meeting.display" class="btn btn-danger btn-xs" (click)="onChangeDisplay(i)">✖</a>
+          </td>
+          <td *ngIf="isAdmin" style="text-align:center; cursor: pointer;" >
+            <a (click)="onShowParticipants(meeting.id)">anzeigen</a>
+          </td>
+          <td *ngIf="!isAdmin" style="text-align:center;" >
+            <a *ngIf="signupValues[meeting.id]" class="btn btn-success btn-xs" (click)="onChangeSignup(meeting.id)">✔</a>
+            <a *ngIf="!signupValues[meeting.id]" class="btn btn-danger btn-xs" (click)="onChangeSignup(meeting.id)">✖</a>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table *ngIf="isLoading">
+      <tbody>
+        <tr>
+          <td>
+            <div class="loader" style="text-align: center;"></div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <button type="submit" class="btn btn-info col-xs-3" (click)="onSaveChanges()" [disabled]="!isDifferent">
+      <span *ngIf="isDifferent">Änderungen übernehmen</span>
+      <span *ngIf="!isDifferent" style="color: rgb(117, 0, 0);">keine Änderungen vorhanden</span>
+    </button>
+  </div>
 </div>
-  
