--- a/src/app/user/participants-list/participants-list.component.html
+++ b/src/app/user/participants-list/participants-list.component.html
@@ -1,29 +1,65 @@
-<h2>Veranstaltungen</h2>
-
-<hr>
-
-<a class="btn btn-info btn-sm col-3 mb-3" (click)="onBack()">zurück zur Übersicht</a>
-
-<hr>
-
-<span *ngIf="isEmpty">Zu dieser Veranstaltung hat sich noch niemand angemeldet.</span>
-<table *ngIf="!isEmpty" class="table table-bordered table-striped" >
-  <thead class="thead-dark">
-    <tr>
-      <th>Nr.</th>
-      <th>Vorname</th>
-      <th>Nachname</th>
-      <th>E-Mail</th>
-      <th>Firma</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let user of users; let i = index">
-      <td style="text-align:right">{{ i + 1 }}</td>
-      <td>{{ user.firstname }}</td>
-      <td>{{ user.lastname }}</td>
-      <td>{{ user.email }}</td>
-      <td>{{ user.company }}</td>
-    </tr>
-  </tbody>
-</table>
+<div class="col-xs-12">  
+  <h3>Veranstaltung</h3>
+  <hr>
+  <div *ngIf="!meetingExsists">
+    Die Veranstaltung mit der Id: {{ id }} existiert leider nicht. Bitte überprüfen Sie nochmal, ob Sie wirklich diese Veranstaltungsehen möchten
+  </div>
+  <div *ngIf="meetingExsists">
+    <table *ngIf="!isLoading">
+      <thead>
+        <tr>
+          <th style="text-align: center;">Name</th>
+          <th style="text-align: center; width: 150px;">Datum</th>
+          <th style="text-align: center; width: 150px;">Uhrzeit</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="text-align: center;">{{ meeting.name }}</td>
+          <td style="text-align: center;">{{ meeting.datetime | date:'dd.MM.yyyy' }}</td>
+          <td style="text-align: center;">{{ meeting.datetime | date:'HH:mm' }} Uhr</td>
+        </tr>
+      </tbody>
+    </table>
+    <br>
+    <br *ngIf="isLoading">
+    <br *ngIf="isLoading">
+    <table *ngIf="isEmpty" class="table table-bordered table-striped">
+      <thead>
+        <tr>
+          <th style="text-align: center;">Zu dieser Veranstaltung hat sich noch niemand angemeldet.</th>
+        </tr>
+      </thead>
+    </table>
+    <table *ngIf="!isEmpty" class="table table-bordered table-striped" >
+      <thead class="thead-dark">
+        <tr>
+          <th style="width: 10px;">Nr.</th>
+          <th>Vorname</th>
+          <th>Nachname</th>
+          <th>E-Mail</th>
+          <th>Firma</th>
+        </tr>
+      </thead>
+      <tbody *ngIf="!isLoading">
+        <tr *ngFor="let user of users; let i = index">
+          <td style="text-align:right;">{{ i + 1 }}</td>
+          <td>{{ user.firstname }}</td>
+          <td>{{ user.lastname }}</td>
+          <td>{{ user.email }}</td>
+          <td>{{ user.company }}</td>
+        </tr>
+      </tbody>
+    </table>
+    <table *ngIf="isLoading">
+      <tbody>
+        <tr>
+          <td>
+            <div class="loader" style="text-align: center;"></div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <a class="btn btn-info col-xs-3" (click)="onBack()">zurück zur Übersicht</a>
+  </div>
+</div>
